--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,7 +8,7 @@ description: 所思有所记
 #-------------------------------
 # Author Settings
 author:
-  name: 阿浪
+  name: 鸿鹄
   image: 水天光辉.jpg
   say-hello: 工作, 学习, 记录
   # bio: 且随疾风前行，身后亦须留心。
